# hairStyleBuddy

./: .gitattributes  CMakeLists.txt  README.md  TODO.md
hairStyleBuddy/hairStyleBuddy/: CMakeLists.txt
hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/: README.md
hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/.github/: copilot-instructions.md
hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/: TODO.md
hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/qml/: PageHeader.qml
hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/scripts/: deploy.sh  install-autostart.sh
hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/qml/: ActionTile.qml  HomePage.qml
hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/scripts/: deploy.sh
hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/qml/: AppointmentsPage.qml
hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/src/: main.cpp
hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/src/backend/: AppController.h
hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/scripts/: deploy.sh
hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/src/backend/models/: AppointmentModel.cpp  ServiceModel.cpp
hairStyleBuddy/hairStyleBuddy/hairStyleBuddy/src/backend/services/: SettingsService.h
hairStyleBuddy/hairStyleBuddy/scripts/: deploy.sh  install-autostart.sh
hairStyleBuddy/hairStyleBuddy/src/backend/models/: ServiceModel.h
qml/: ActionTile.qml  Main.qml  (+5 more)
(+21 files in other folders)
